--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "axios": "^1.5.1",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "pg": "^8.11.3",
     "pinia": "^2.1.6",
     "postgres": "^3.3.5",
