--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^1.0.0-beta.0",
     "@nuxtjs/google-fonts": "^3.0.2",
+    "@types/file-saver": "^2.0.6",
     "@types/pg": "^8.10.3",
     "nuxt": "^3.8.0"
   },
@@ -21,7 +22,6 @@
     "@nuxt/ui": "^2.10.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@pinia/nuxt": "^0.4.11",
     "@supabase/supabase-js": "^2.33.2",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
@@ -29,7 +29,6 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "pg": "^8.11.3",
-    "pinia": "^2.1.6",
     "postgres": "^3.3.5",
     "sass": "^1.67.0",
     "zod": "^3.22.2"
