--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.0.0-beta.0",
+    "@nuxt/devtools": "^1.0.3",
+    "@nuxt/image": "^1.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/supabase": "^1.1.4",
     "@types/file-saver": "^2.0.6",
     "@types/pg": "^8.10.3",
     "nuxt": "^3.8.0"
