--- a/package.json
+++ b/package.json
@@ -12,26 +12,33 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
+    "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.1.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.4",
     "@types/file-saver": "^2.0.6",
     "@types/node": "^20.11.6",
     "@types/pg": "^8.10.3",
     "@types/tedious": "^4.0.14",
     "@types/validator": "^13.11.8",
-    "nuxt": "^3.10.0"
+    "eslint": "^8.56.0",
+    "nuxt": "^3.10.3",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@iconify-json/heroicons": "^1.1.20",
+    "@iconify/utils": "^2.1.22",
     "@nuxt/ui": "^2.14.1",
+    "@nuxt/ui-pro": "^1.0.1",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@supabase/supabase-js": "^2.33.2",
     "@vueuse/core": "^10.6.0",
     "@vueuse/nuxt": "^10.4.1",
     "axios": "^1.5.1",
+    "date-fns": "^3.3.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "pg": "^8.11.3",
